UI: Fix the display of bill id in bill list (it was overlapping with bill title)

--- a/app/assets/stylesheets/bills.css
+++ b/app/assets/stylesheets/bills.css
@@ -2,6 +2,14 @@
  * They will automatically be included in application.css.
  * You can use Sass (SCSS) here: http://sass-lang.com */
 
+
+.billid {
+  word-break: break-all;
+  display: block;
+  width: 100%;
+  font-size: 11px;
+}
+
 .hero-space-bill {
   padding: 20px 0px 15px;
   margin-top: -15px;
